<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.fhtiger.utils</groupId>
    <artifactId>simple-helper-utils</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <description>Useful Utilities</description>
    <name>simple-helper-utils</name>
    <url>https://github.com/Chivenh/simple-helper-utils</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <tag>deploy/release</tag>
        <connection>https://github.com/Chivenh/simple-helper-utils.git</connection>
        <developerConnection>https://github.com/Chivenh/</developerConnection>
        <url>https://github.com/Chivenh/simple-helper-utils.git</url>
    </scm>
    <developers>
        <developer>
            <id>Chivenh</id>
            <name>FhTiger</name>
            <email>guishizuiezhishi@163.com</email>
            <url>https://github.fhtiger.com</url>
            <organization>FlyTiger-zh_CN</organization>
            <roles>
                <role>manager</role>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>
    <properties>
        <jdk.version>17</jdk.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
		<compile.show.waring>true</compile.show.waring>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
        <version.commons-net>3.11.1</version.commons-net>
        <jakarta.validation.version>3.1.0</jakarta.validation.version>
        <aspectjweaver.version>1.9.22</aspectjweaver.version>
        <version.junit5-jupiter>5.11.3</version.junit5-jupiter>
        <version.springframework>6.2.7</version.springframework>
        <version.camel-bean-validator>4.8.1</version.camel-bean-validator>
        <jmh.version>1.37</jmh.version>
        <sfl4j-api.version>2.0.16</sfl4j-api.version>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>${version.jakarta.servlet}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>${version.commons-net}</version>
        </dependency>
        <!-- 自定义校验注解及校验实现-->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>${jakarta.validation.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${sfl4j-api.version}</version>
        </dependency>
        <!-- 依赖不传递，项目中使用时才引入 -->

        <!-- Aspectj 支持 -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectjweaver.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- RequestMapping 相关注解 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${version.springframework}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${version.springframework}</version>
            <optional>true</optional>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-bean-validator -->
        <!-- 添加bean-validator用于测试 -->
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-bean-validator</artifactId>
            <version>${version.camel-bean-validator}</version>
            <optional>true</optional>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${version.junit5-jupiter}</version>
            <optional>true</optional>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core -->
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>${jmh.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-annprocess -->
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>${jmh.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>deploy_release</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>FlyTiger</id>
                    <name>fhtiger Release Repository</name>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
                <snapshotRepository>
                    <id>FlyTiger</id>
                    <name>fhtiger Snapshot Repository</name>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--编译包-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <encoding>${project.build.sourceEncoding}</encoding>
                            <release>${jdk.version}</release>
                            <showWarnings>${compile.show.waring}</showWarnings>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
